--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /.idea/
 /01-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse/aula-02/Programa.class
+/01-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse/aula-04/TestaVariaveis.iml
+/out/
