chore: ignorando arquivos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /001-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse/aula-04/TestaVariaveis.iml
 /out/
 /002-ita-orientacao-a-objetos-com-java/semana-1/002-semana-1.iml
+/002-ita-orientacao-a-objetos-com-java/002-ita-orientacao-a-objetos-com-java.iml
