--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /out/
 /002-ita-orientacao-a-objetos-com-java/semana-1/002-semana-1.iml
 /002-ita-orientacao-a-objetos-com-java/002-ita-orientacao-a-objetos-com-java.iml
+/001-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse/001-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse.iml
+/001-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse/aula-04/aula-04.iml
