--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /002-ita-orientacao-a-objetos-com-java/002-ita-orientacao-a-objetos-com-java.iml
 /001-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse/001-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse.iml
 /001-curso-de-java-jre-e-jdk-escreva-o-seu-primeiro-codigo-com-eclipse/aula-04/aula-04.iml
+/002-ita-orientacao-a-objetos-com-java/semana-2/002-semana-2.iml
+/002-ita-orientacao-a-objetos-com-java/semana-3/002-semana-3.iml
