--- a/017-alura-maven/modulo-017/modulo-017/pom.xml
+++ b/017-alura-maven/modulo-017/modulo-017/pom.xml
@@ -21,6 +21,13 @@
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.6</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
     </dependencies>
 
 
