--- a/018-alura-java-e-jdbc/modulo-018/pom.xml
+++ b/018-alura-java-e-jdbc/modulo-018/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
