--- a/019-katas/modulo-19/pom.xml
+++ b/019-katas/modulo-19/pom.xml
@@ -20,6 +20,11 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.junit.dataprovider</groupId>
+            <artifactId>junit4-dataprovider</artifactId>
+            <version>2.10</version>
+        </dependency>
     </dependencies>
 
 </project>
